<?xml version="1.0"?>
<package>
  <name>my_great_package_auto</name>
  <version>0.0.0</version>
  <description>The is a great package</description>
  <maintainer email="john@mail.com">John Smith</maintainer>
  <license>BSD</license>
  <url>http://google.com</url>
  <author email="jane.doe@example.com">Jane Doe</author>
  <build_depend>another_package</build_depend>
  <buildtool_depend>package_x</buildtool_depend>
  <run_depend>package_y</run_depend>
  <test_depend>package_z</test_depend>
  <export>
  </export>
</package>
